src/test/deca/context/invalid/MethodNotthere.deca
// Description:
//    method not found
//
// Resultats:
//    aucune erreur
//
// Historique:
//    cree le 08/01/2023

class A {
	int a;
	boolean eq(int a){
		return this.a == a;
}
}

{
	A a = new A();
	a.set(1);
}
